# raytracer

./: CMakeLists.txt  README.md
res/: myScene2.test  smiley.ppm
src/: Image3f.h  edx_hw3_raytr.cpp  geometries.h  grid.h  main.cpp  readScene.h
